# pico2w-tfm

./: .gitignore  .gitmodules  README.md  build.sh  pico_uf2.sh  test_cbc_decrypt.py  todo.md  uf2conv.py
app_broker/: CMakeLists.txt  app.h  main_ns.c
docs/: README.md  build-system.md  model-encryption.md  psa-api.md  secure-partitions.md  testing-framework.md  tfm-architecture.md  tinymaix-integration.md  troubleshooting.md
docs-ko/: README.md  build-system.md  model-encryption.md  psa-api.md  secure-partitions.md  testing-framework.md  tfm-architecture.md  tinymaix-integration.md  troubleshooting.md
interface/include/: tfm_cmsis_nn_inference_defs.h  tfm_echo_defs.h  tfm_tflm_inference_defs.h  tfm_tinymaix_inference_defs.h
interface/src/: tfm_cmsis_nn_inference_api.c  tfm_echo_api.c  tfm_tflm_inference_api.c  tfm_tinymaix_inference_api.c
lib/cmsis_nn_lib/: CMakeLists.txt
lib/cmsis_nn_lib/include/: cmsis_nn_wrapper.h
lib/cmsis_nn_lib/src/: cmsis_nn_wrapper.c
lib/tflm_lib/: CMakeLists.txt
lib/tflm_lib/include/: tflm_c_api.h
lib/tflm_lib/src/: micro_printf.cpp  tflm_c_api.cpp
models/: audio_preprocessor_int8.h  encrypted_mnist_model_psa.c  encrypted_mnist_model_psa.h  encrypted_mnist_model_psa.key  simple_xor_model.c  simple_xor_model.h
nspe/: CMakeLists.txt  echo_test_app.c  psa_crypto_test.c  test_runner.c
partitions/: CMakeLists.txt  manifest_list.yaml
partitions/cmsis_nn_inference/: CMakeLists.txt  cmsis_nn_inference.c  cmsis_nn_inference_manifest.yaml
partitions/echo_service/: CMakeLists.txt  echo_service.c  echo_service_manifest.yaml
partitions/tflm_inference/: CMakeLists.txt  tflm_inference.cpp  tflm_inference_manifest.yaml
partitions/tinymaix_inference/: CMakeLists.txt  tinymaix_inference.c  tinymaix_inference_manifest.yaml  tm_port.h
partitions/tinymaix_inference/tinymaix/include/: tinymaix.h
partitions/tinymaix_inference/tinymaix/src/: tm_layers.c
pico2w-tfm-tflm-ns/: .gitignore  CMakeLists.txt
pico2w-tfm-tflm-ns/app/: CMakeLists.txt
pico2w-tfm-tflm-ns/app/client_ns_app/: CMakeLists.txt  main_ns.c
pico2w-tfm-tflm-ns/interface/: psa_tflm_service_api.h
spe/: CMakeLists.txt
spe/config/: config_tinyml.cmake  mbedtls_extra_config.h
spe/utils/: tinyml_flag_parse.cmake
tflm_interface/: CMakeLists.txt
tflm_interface/include/: psa_tflm_defs.h
tflm_interface/ns/: psa_tflm_client.c  psa_tflm_client.h
tflm_interface/spe/: psa_tflm_service.h
tflm_minimal/: CMakeLists.txt
tflm_minimal/include/: tflm_c_interface.h
tflm_minimal/src/: tflm_c_interface.cpp
tflm_ns/: CMakeLists.txt  README.md  cmsis_nn_inference_test.c  echo_test_app.c  psa_crypto_test.c  test_runner.c  tflm_inference_test.c  tinymaix_inference_test.c
tflm_ns/app/: CMakeLists.txt  tflm_main.c
tflm_partition/: CMakeLists.txt  tflm_crypto_ops.c  tflm_crypto_ops.h  tflm_inference_engine.c  tflm_inference_engine.h  tflm_manifest_list.yaml  tflm_secure_service_sp.c  tflm_secure_service_sp.h  tflm_secure_service_sp.yaml
tflm_spe/: CMakeLists.txt
tflm_spe/config/: config_provision.cmake  config_provision.h  config_tflm.cmake  config_tflm.h  mbedtls_config.h  mbedtls_extra_config.h
tflm_spe/partitions/: CMakeLists.txt  encrypted_audio_model.c  encrypted_audio_model.h  tflm_crypto_ops.c  tflm_crypto_ops.h  tflm_inference_engine.cpp  tflm_inference_engine.h  tflm_manifest_list.yaml  tflm_secure_service_sp.c  tflm_secure_service_sp.h  tflm_secure_service_sp.yaml
tflm_spe/utils/: provision_flag_parse.cmake  tflm_flag_parse.cmake
tools/: create_test_model.py  model_encryptor.py  tinymaix_model_encryptor.py
