#-------------------------------------------------------------------------------
# Copyright (c) 2024, Your Organization. All rights reserved.
#
# SPDX-License-Identifier: BSD-3-Clause
#
#-------------------------------------------------------------------------------

cmake_minimum_required(VERSION 3.21)

# Include echo service partition
add_subdirectory(echo_service)
